# eng25519_artifact

./: README.md
Crypto/Curve25519_AVX512IFMA/: CMakeLists.sources  CMakeLists.txt  README.md  test.c
Crypto/Curve25519_AVX512IFMA/cmake/Modules/: FindOpenSSL.cmake
Crypto/Curve25519_AVX512IFMA/inc/: clocks.h  curve25519.h  gfparith_1w.h  gfparith_8w.h  intrin.h  moncurve.h  openssl_curve25519.h  tedcurve.h  tedtable.h  utils.h
Crypto/Curve25519_AVX512IFMA/src/: clocks.c  curve25519.c  gfparith_1w.c  gfparith_8w.c  moncurve.c  openssl_curve25519.c  tedcurve.c  tedtable.c  utils.c
Crypto/Hisil_AVX512/: CMakeLists.sources  CMakeLists.txt  README.md  clocks.c  clocks.h  datatype.h  main.c  montgomery.c
ENG25519/DoT_timer/: CMakeLists.txt  DoT_timer.c  README.md  dns.h  tls_timer.c
ENG25519/eng25519/: CMakeLists.sources  CMakeLists.txt  DESCRIPTION  README.md  eng25519.c  eng25519.version.h.in
ENG25519/eng25519-results/: README.md  cc.ipynb  handshake.ipynb  plot.ipynb
ENG25519/eng25519-results/batch_keygen/: s_b1.txt  s_b128.txt  s_b128_helper.txt  s_b16.txt  s_b16_helper.txt  s_b1_helper.txt  s_b2.txt  s_b2_helper.txt  s_b32.txt  s_b32_helper.txt  s_b4.txt  s_b4_helper.txt  s_b64.txt  s_b64_helper.txt  s_b8.txt  s_b8_helper.txt
ENG25519/eng25519-results/cc_unbound/: c_unbound.txt  c_unbound_helper.txt  s_unbound.txt  s_unbound_helper.txt
ENG25519/eng25519-results/dot/: unbound_all_openssl.txt  unbound_p256.txt  unbound_swarm_ccold.txt  unbound_x25519.txt
ENG25519/eng25519-results/handshake/: server_all_openssl.txt  server_p256.txt  server_swarm_ccold.txt  server_x25519.txt
ENG25519/eng25519/debug/: debug.c  debug.h
ENG25519/eng25519/meths/: eng25519_asn1_meth.c  eng25519_asn1_meth.h  eng25519_ed25519_meth.c  eng25519_ed25519_meth.h  eng25519_keypair.c  eng25519_keypair.h  eng25519_md_identity_meth.c  eng25519_md_identity_meth.h  eng25519_x25519_meth.c  eng25519_x25519_meth.h
ENG25519/eng25519/ossl/: eng25519.ec  eng25519.txt  eng25519.txt.old  eng25519_err.c  eng25519_err.h  eng25519_objects.c  eng25519_objects.h  eng25519_objects_internal.h  ossl_compat.c  ossl_compat.h
ENG25519/eng25519/providers/_dummy/: CMakeLists.txt  base.c  curve25519.c
ENG25519/eng25519/providers/api/: base.h  curve25519.h
ENG25519/eng25519/providers/batch_fast_lib/: CMakeLists.sources  CMakeLists.txt  base.c  batch.c  batch.h  curve25519.c
ENG25519/eng25519/providers/batch_fast_lib/ed25519_fast_avx512ifma/: ed255.c  ed255.h  edwards255_avx512.c  edwards255_avx512.h  eltfp255_1w_fullradix.c  eltfp255_1w_fullradix.h  eltfp255_8w_redradix.h  params.h  params_avx512.h
ENG25519/eng25519/providers/batch_fast_lib/x25519_batch_avx512ifma/: CMakeLists.sources  CMakeLists.txt  LICENSE  clocks.h  ecdh.c  ecdh.h  gfparith.c  gfparith.h  intrin.h  moncurve.c  moncurve.h  openssl_curve25519.c  openssl_curve25519.h  openssl_curve25519.s  table_w4_ed25519.c  tedcurve.c  tedcurve.h  tedtable.c  tedtable.h  test.c  utils.c  utils.h
ENG25519/eng25519/providers/batch_fast_lib/x25519_fast_avx512f/: CMakeLists.sources  CMakeLists.txt  cycles.h  datatype.h  main.c  montgomery.c  montgomery.h
ENG25519/eng25519/providers/openssl_lib/: CMakeLists.sources  CMakeLists.txt  base.c  curve25519.c  openssl_curve25519.c  openssl_curve25519.h  openssl_curve25519.s
ENG25519/eng25519/test/: apps.c  apps.h  ed25519.key  ed25519.pem  eng25519.cnf  evp_pkey.c  evp_pkey_x25519.c  evp_test.c  ossl_compat.c  ossl_compat.h  unbound.conf
ENG25519/eng25519/util/: dot_bench_client.sh  dot_bench_client_v1.sh  dot_bench_client_v2.sh  dot_bench_server.sh  dot_bench_server_v1.sh  dot_bench_server_v2.sh  heuristic_warmup.c  mkerr.pl  timer_warmup.c  utils.sh  utils_v2.sh
Verify/: README.md  adc_fp255_8x1w.cl  adc_fp255_8x1w.gas  add_fp255_8x1w.cl  add_fp255_8x1w.gas  batch_avx512_test  carry_fp255_8x1w.cl  carry_fp255_8x1w.gas  final_modp_fp255_8x1w.cl  final_modp_fp255_8x1w.gas  mul51_fp255_8x1w.cl  mul51_fp255_8x1w.gas  mul_x_fp255_8x1w.cl  mul_x_fp255_8x1w.gas  sbc_fp255_8x1w.cl  sbc_fp255_8x1w.gas  sqr_x_fp255_8x1w.cl  sqr_x_fp255_8x1w.gas
